# tf-drift-cli

./: go.mod  pyproject.toml  tf-drift
cmd/tf-drift/: main.go
internal/engine/: detector.go  impact.go
internal/models/: graph.go  models.go
internal/multi_env/: comparator.go
internal/parsers/config/: config.go
internal/parsers/hcl/: hcl.go
internal/parsers/tfstate/: tfstate.go
internal/policy/: policy.go
internal/remediation/: advisor.go  conditions.go  config.go  orchestrator.go
internal/reporters/: json.go  markdown.go  terminal.go
testdata/: .tfdrift-policy-critical.yaml  .tfdrift-policy-dup.yaml  .tfdrift-policy-empty-match.yaml  .tfdrift-policy-invalid.yaml  .tfdrift-policy-wildcard.yaml  .tfdrift-policy.yaml  .tfdrift-remediate.yaml  main.tf  terraform.tfstate
tf_drift_cli/: __init__.py  cli.py
tf_drift_cli/engine/: detector.py  impact.py
tf_drift_cli/models/: graph.py  resource.py
tf_drift_cli/multi_env/: comparator.py
tf_drift_cli/parsers/: config.py  hcl_parser.py  tfstate.py
tf_drift_cli/remediation/: advisor.py
tf_drift_cli/reporters/: html_report.py  json_report.py  markdown.py  terminal.py
