[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tf-drift-cli"
version = "1.0.0"
description = "Terraform infrastructure state drift detection and remediation CLI tool"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
tf-drift = "tf_drift_cli.cli:main"

[tool.setuptools.packages.find]
include = ["tf_drift_cli*"]
